2009-04-13  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/convert.c (d2mpfr1_list, str2mpfr1_list): allow 'prec' to be
	a vector.

	* R/as.R (mpfr): now support mpfr(<character>, prec)
	* src/convert.c (str2mpfr1_list): implement character |-> mpfr

	* src/utils.c (R_mpfr_set_default_prec, *_get_*):

	* R/array.R (cbind, rbind): also work when there are "character"

	* R/AllClasses.R (array_or_vector): only contain 'atomicVector'

2009-03-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Makevars.win: add this after suggestions from Uwe

2009-02-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Arith.R (Compare): add missing ', .Generic' to some methods.
	* tests/matrix-ex.R: testing 'A >= 3' etc

2009-02-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/array.R (cbind, rbind): new "..." methods for cbind(), rbind(),
	* R/AllClasses.R:  using new "Mnumber" class
	* man/bind-methods.Rd: docu

2009-01-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/array.R (aperm): method.

	* R/AllClasses.R: 'Dimnames', not 'DimNames'
	* R/Arith.R: use .Arith.mpfr.num() macros etc, and make sure, these
	are used also in the <mpfr> o <array> cases.

	* tests/matrix-ex.R: test array / mpfr


2009-01-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/array.R (.mpfrA.subset): if A[...] has length(dim(.))== 2,
	ensure it becomes an "mpfrMatrix"

2009-01-24  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/array.R (mpfrArray): make more (user friendly) like array()
	([<-): render working also for  A[i,j,k] <- val.
	(.mpfrA.subset): make A[,,1] working
	(.mA.subAssign): separate auxiliary function for more than 1 method

2009-01-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Ops.c (Math_mpfr): activate (trunc,floor,ceiling)

	* tests/arith-ex.R: and test them minimally

2009-01-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.1-1 -- another "snapshot"

	* R/array.R (t . mpfr): -->  [ 1 x n ] - matrix
